# llm-robot-wars

./: .gitignore  CMakeLists.txt  LICENSE  README.md  colors.cfg  llama-wars.cfg  start-llama-server.sh
llm/: llama_bot.c  llama_bot.h  llama_client.c  llama_client.h
scripts/: bot_chaser.lua  bot_duelist.lua  bot_fortress.lua  bot_lancer.lua  bot_light.lua  bot_llm.lua  bot_llm.lua.backup  bot_random.lua  bot_skirmisher.lua
src/: colors.c  colors.h  fx.c  fx.h  game.h  lighting.c  lighting.h  main.c  scripting.c  scripting.h  update.c  update.h  walls.c  walls.h
